--- a/core/accounts/templates/accounts/login.html
+++ b/core/accounts/templates/accounts/login.html
@@ -5,70 +5,72 @@
         </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="/accounts/login/">Login<span class="sr-only">(current)</span></a>
+        <a class="nav-link active" href="/accounts/login/">Login<span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/accounts/register/">Register</a>
+        <a class="nav-link" href="/accounts/register/">Register</a>
     </li>
 {% endblock %}
 {% block content %}
 
 
 
-      <form class="col s12" action="/accounts/login/" method="POST">
-          {% csrf_token %}
+    <form class="col s12" action="/accounts/login/" method="POST">
+        {% csrf_token %}
         <div class="form-container">
             <div class="row">
-              <div class="input-field col s12 center">
-                <p class="center login-form-text">Sign In</p>
-              </div>
+                <div class="input-field col s12 center">
+                    <p class="center login-form-text">Sign In</p>
+                </div>
             </div>
             {% if form.non_field_errors %}
                 <ul class='form-errors'>
                     {% for error in form.non_field_errors %}
-                        <li class=" left-alert" ><blockquote class="alert-danger">{{ error }}</blockquote></li>
+                        <li class=" left-alert">
+                            <blockquote class="alert-danger">{{ error }}</blockquote>
+                        </li>
                     {% endfor %}
                 </ul>
             {% endif %}
-                <div class="row">
-                  <div class="input-field col s12">
+            <div class="row">
+                <div class="input-field col s12">
 
-                        <label for="{{ form.username.id_for_label }}">Username:</label>
+                    <label for="{{ form.username.id_for_label }}">Username:</label>
 
                     {{ form.username }}
-                  </div>
                 </div>
-                <div class="row">
-                  <div class="input-field col s12">
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
                     <label for="{{ form.password.id_for_label }}">Password:</label>
                     {{ form.password }}
-                  </div>
                 </div>
+            </div>
 
 
             <div class="row">
-              <div class="input-field col s12 m12 l12  login-text">
-                  <input type="checkbox" id="remember-me">
-                  <label for="remember-me">Remember me</label>
-              </div>
+                <div class="input-field col s12 m12 l12  login-text">
+                    <input type="checkbox" id="remember-me">
+                    <label for="remember-me">Remember me</label>
+                </div>
             </div>
             <br>
             <center>
-            <div class="row">
-              <div class="input-field col s12">
-                <button class="btn waves-effect waves-light col-sm-12" type="submit">Login</button>
-              </div>
-            </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <button class="btn waves-effect waves-light col-sm-12" type="submit">Login</button>
+                    </div>
+                </div>
             </center>
             <div class="row">
-              <div class="input-field col s6 m6 l6">
-                <p class="margin medium-small"><a href="/accounts/register/">Register Now!</a></p>
-              </div>
-              <div class="input-field col s6 m6 l6">
-                  <p class="margin right-align medium-small"><a href="#">Forgot password ?</a></p>
-              </div>
+                <div class="input-field col s6 m6 l6">
+                    <p class="margin medium-small"><a href="/accounts/register/">Register Now!</a></p>
+                </div>
+                <div class="input-field col s6 m6 l6">
+                    <p class="margin right-align medium-small"><a href="#">Forgot password ?</a></p>
+                </div>
             </div>
         </div>
-      </form>
+    </form>
 
 {% endblock %}
