--- a/core/accounts/templates/accounts/account_tag_posts.html
+++ b/core/accounts/templates/accounts/account_tag_posts.html
@@ -27,7 +27,7 @@
     {% endfor %}
 {% endblock %}
 {% block content %}
-<div id="profile-page-wall-posts" class="card">
+    <div id="profile-page-wall-posts" class="card">
         <div class="col-sm-12">
             <div id="profile-page-wall-post" class="card">
                 {% for post in post_list %}
@@ -35,11 +35,12 @@
                     <div class="card-profile-title">
                         <div class="row">
                             <div class="col-sm-1">
-                                <img src={{ avatar_url }} alt="" class="circle responsive-img valign profile-post-uer-image">
+                                <img src={{ avatar_url }} alt=""
+                                     class="circle responsive-img valign profile-post-uer-image">
                             </div>
                             <div class="col-sm-10">
                                 <p class="grey-text text-darken-4 margin">{{ post.author }}</p>
-                                <span class="grey-text text-darken-1 ultra-small">Shared {{ post.privacy }}ly -  {{ post.created_at }}</span>
+                                <span class="grey-text text-darken-1 ultra-small">Shared {{ post.privacy }}ly - {{ post.created_at }}</span>
                             </div>
                             <div class="col-sm-1 right-align">
                                 <i class="mdi-navigation-expand-more"></i>
@@ -52,7 +53,8 @@
                         </div>
                     </div>
                     <div class="card-image profile-medium">
-                        <img src={{ post.image.url }} alt="sample" class="responsive-img profile-post-image profile-medium">
+                        <img src={{ post.image.url }} alt="sample"
+                             class="responsive-img profile-post-image profile-medium">
                         <span class="card-title">{{ post.title }}</span>
                     </div>
                     <div class="card-content">
@@ -63,17 +65,19 @@
                             <i class="fa fa-tags"></i>
                             Tags:
                             {% for tag in post.tags.all %}
-                                 <div class="chip">
-                                    <a href="/tags/{{ tag.id }}/posts/"><span class="label label-primary ">{{ tag.name }}</span></a>
-                                 </div>
+                                <div class="chip">
+                                    <a href="/tags/{{ tag.id }}/posts/"><span
+                                            class="label label-primary ">{{ tag.name }}</span></a>
+                                </div>
                             {% empty %}
                                 <h2>Sorry, no tags yet</h2>
                             {% endfor %}
                         </div>
                         <div class="input-field col s8 margin">
-                            <form action="#" >{% csrf_token %}
+                            <form action="#">{% csrf_token %}
                                 <label for="profile-comments" class="">Comments</label>
-                                <textarea class="materialize-textarea" id="profile-comments" placeholder="Your Message" required></textarea>
+                                <textarea class="materialize-textarea" id="profile-comments" placeholder="Your Message"
+                                          required></textarea>
                                 <button class="btn waves-effect waves-light" type="submit" name="action">Submit
                                     <i class="mdi-content-send right"></i>
                                 </button>
@@ -84,7 +88,7 @@
 
                 {% empty %}
 
-                        <p>Sorry, no posts yet</p>
+                    <p>Sorry, no posts yet</p>
                 {% endfor %}
             </div>
         </div>
@@ -106,7 +110,7 @@
             {% if num == post_list.number %}
                 <li class="active"><a>{{ num }}</a></li>
             {% else %}
-                <li class="waves-effect"><a href="?page={{ num }}">{{ num  }}</a></li>
+                <li class="waves-effect"><a href="?page={{ num }}">{{ num }}</a></li>
             {% endif %}
         {% endfor %}
 
