--- a/core/posts/templates/posts/detail.html
+++ b/core/posts/templates/posts/detail.html
@@ -63,7 +63,7 @@
         <!-- Author -->
         <p class="lead">
             <i class="fa fa-user"></i>
-        by
+            by
             {{ post.author }}
         </p>
 
@@ -83,13 +83,13 @@
         <p class="lead">{{ post.text }}</p>
         <hr>
 
-            <i class="fa fa-tags"></i>
-            Tags:
-            {% for tag in post.tags.all %}
-                 <div class="chip">
-                    <a href="/tags/{{ tag.id }}/posts/"><span class="label label-primary ">{{ tag.name }}</span></a>
-                 </div>
-            {% endfor %}
+        <i class="fa fa-tags"></i>
+        Tags:
+        {% for tag in post.tags.all %}
+            <div class="chip">
+                <a href="/tags/{{ tag.id }}/posts/"><span class="label label-primary ">{{ tag.name }}</span></a>
+            </div>
+        {% endfor %}
 
         <hr>
 
@@ -108,16 +108,17 @@
             </div>
         </div>
         {% for comment in post.comments.all %}
-        <div class="card">
-            <div class="card-content">
-                <span class="card-title">Commented by {{ comment.author }} - <i class="fa fa-calendar"></i>{{ comment.created_at }} </span>
-                {{ comment.text }}
+            <div class="card">
+                <div class="card-content">
+                    <span class="card-title">Commented by {{ comment.author }} - <i
+                            class="fa fa-calendar"></i>{{ comment.created_at }} </span>
+                    {{ comment.text }}
+                </div>
+                <!--<div class="card-action">
+                    <a href="#">This is a link</a>
+                    <a href="#">This is a link</a>
+                </div>-->
             </div>
-            <!--<div class="card-action">
-                <a href="#">This is a link</a>
-                <a href="#">This is a link</a>
-            </div>-->
-        </div>
         {% endfor %}
     </div>
 
@@ -125,15 +126,15 @@
 
 {% block join %}
     <!-- Side Widget -->
-          <div class="card white">
-            <div class="card-content black-text">
-              <span class="card-title">Join Us</span>
-              <p>Make your own blog!</p>
-            </div>
-            <div class="card-action center-block">
-                <a href="/accounts/login/" class="btn waves-effect waves-light" type="submit" name="action">
-                      Join
-                </a>
-            </div>
-          </div>
+    <div class="card white">
+        <div class="card-content black-text">
+            <span class="card-title">Join Us</span>
+            <p>Make your own blog!</p>
+        </div>
+        <div class="card-action center-block">
+            <a href="/accounts/login/" class="btn waves-effect waves-light" type="submit" name="action">
+                Join
+            </a>
+        </div>
+    </div>
 {% endblock %}
